<?xml version="1.0" encoding="utf-8"?>
<restrictions xmlns:android="http://schemas.android.com/apk/res/android">
    <restriction
        android:defaultValue="5900"
        android:key="port"
        android:restrictionType="integer"
        android:title="@string/main_activity_settings_port" />

    <restriction
        android:defaultValue="5500"
        android:key="portReverse"
        android:restrictionType="integer"
        android:title="@string/settings_port_reverse" />

    <restriction
        android:defaultValue="5500"
        android:key="portRepeater"
        android:restrictionType="integer"
        android:title="@string/settings_port_repeater" />

    <restriction
        android:defaultValue="0.0"
        android:key="scaling"
        android:restrictionType="string"
        android:title="@string/main_activity_settings_scaling" /> <!-- NOTE: float not supported, so we use string -->

    <restriction
        android:defaultValue="false"
        android:key="viewOnly"
        android:restrictionType="bool"
        android:title="@string/main_activity_settings_view_only" />

    <restriction
        android:defaultValue="false"
        android:key="showPointers"
        android:restrictionType="bool"
        android:title="@string/main_activity_settings_show_pointers" />

    <restriction
        android:defaultValue="true"
        android:key="fileTransfer"
        android:restrictionType="bool"
        android:title="@string/main_activity_settings_file_transfer" />

    <restriction
        android:defaultValue=""
        android:key="password"
        android:restrictionType="string"
        android:title="@string/main_activity_settings_password" />

    <restriction
        android:defaultValue=""
        android:key="accessKey"
        android:restrictionType="string"
        android:title="@string/main_activity_settings_access_key" />

    <restriction
        android:defaultValue="true"
        android:key="startOnBoot"
        android:restrictionType="bool"
        android:title="@string/main_activity_settings_start_on_boot" />

    <restriction
        android:defaultValue="0"
        android:key="startOnBootDelay"
        android:restrictionType="integer"
        android:title="@string/main_activity_settings_start_on_boot_delay" />

    <restriction
        android:defaultValue="Control_L+Shift_L+Escape"
        android:key="chordRecents"
        android:restrictionType="string"
        android:title="@string/main_activity_settings_chord_recents" />

    <restriction
        android:defaultValue="Home"
        android:key="chordHome"
        android:restrictionType="string"
        android:title="@string/main_activity_settings_chord_home" />

    <restriction
        android:defaultValue="Escape"
        android:key="chordBack"
        android:restrictionType="string"
        android:title="@string/main_activity_settings_chord_back" />

    <restriction
        android:defaultValue="End"
        android:key="chordPower"
        android:restrictionType="string"
        android:title="@string/main_activity_settings_chord_power" />

    <restriction
        android:defaultValue="Control_L+Alt_L+Page_Up"
        android:key="chordVolumeUp"
        android:restrictionType="string"
        android:title="@string/main_activity_settings_chord_volume_up" />

    <restriction
        android:defaultValue="Control_L+Alt_L+Page_Down"
        android:key="chordVolumeDown"
        android:restrictionType="string"
        android:title="@string/main_activity_settings_chord_volume_down" />

    <restriction
        android:defaultValue="Control_L+Alt_L+Delete"
        android:key="chordRotate"
        android:restrictionType="string"
        android:title="@string/main_activity_settings_chord_rotate" />

</restrictions>